--- a/public/index.css
+++ b/public/index.css
@@ -31,6 +31,10 @@ h4 {
 	font-family: 'Nanum Gothic', sans-serif;
 }
 
+a {
+	color: #616161;
+	font-family: 'Nanum Gothic Coding', monospace;
+}
 
 .tabs .indicator {
   font-color: #ec407a;
