created directories for remaining projects. Editing TriviaGame.js with information about the app. Linked the TriviaGame component to Main.js

--- a/public/index.css
+++ b/public/index.css
@@ -40,6 +40,9 @@ a {
   font-color: #ec407a;
 }
 
+#headshot {
+	border-radius: 5%;
+}
 /*font-family: 'Nanum Pen Script', cursive;
 font-family: 'Open Sans', sans-serif;
 font-family: 'Nanum Gothic', sans-serif;
